--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <!-- <li><a href="#skills" class="menu-btn">Skills</a></li> -->
                     <li  class="nav-link projects"><a href="#projects" class="menu-btn">Projects</a></li>
                     <li  class="nav-link contact"><a href="#contact" class="menu-btn">Contact</a></li>
-                    <li id="resume-button-1"  class="nav-link resume"><a  id="resume-link-1" target="_blank" href="./docs/My Resume.pdf"  download="Abhishek's Resume" onclick="window.open('https://drive.google.com/file/d/1Y7HTUWNmkwftr9zyRKYPsns7GrXv8vVn/view?usp=sharing')">Resume</a></li>
+                    <li id="resume-button-1"  class="nav-link resume"><a  id="resume-link-1" target="_blank" href="./docs/My Resume.pdf"  download="Abhishek-M.V.R-Resume" onclick="window.open('https://drive.google.com/file/d/1Y7HTUWNmkwftr9zyRKYPsns7GrXv8vVn/view?usp=sharing')">Resume</a></li>
     
                 </ul>
                 <div class="menu-btn">
@@ -55,7 +55,7 @@
                     <div  class="text-3">And I'm a <span class="typing"></span></div>
                    
                     <span  id="resume-button-2">
-                        <a  id="resume-link-2"   target="_blank" href="./docs/My Resume.pdf"  download="Abhishek's Resume" onclick="window.open('https://drive.google.com/file/d/1Y7HTUWNmkwftr9zyRKYPsns7GrXv8vVn/view?usp=drive_link')">Resume</a>
+                        <a  id="resume-link-2"   target="_blank" href="./docs/My Resume.pdf"  download="Abhishek-M.V.R-Resume" onclick="window.open('https://drive.google.com/file/d/1Y7HTUWNmkwftr9zyRKYPsns7GrXv8vVn/view?usp=drive_link')">Resume</a>
                     </span>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                 <h2 class="title">About me</h2>
                 <div class="about-content">
                     <div  class="column left">
-                        <img class="home-img" src="./docs/ABHI PASSPORT PIC.jpeg" alt="profile">
+                        <img class="home-img" src="./docs/ABHI_PASSPORT_PIC-removebg-preview.png" alt="profile">
                     </div>
                     <div class="column right">
                         <div class="text">I'm M.V.R.Abhishek and I'm a <span class="typing-2"></span></div>
