--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h2 class="title">About me</h2>
                 <div class="about-content">
                     <div  class="column left">
-                        <img class="home-img" src="./docs/ABHI_PASSPORT_PIC-removebg-preview.png" alt="profile">
+                        <img class="home-img" src="./docs/Port_pic-removebg-preview (1).png" alt="profile">
                     </div>
                     <div class="column right">
                         <div class="text">I'm M.V.R.Abhishek and I'm a <span class="typing-2"></span></div>
