--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <!-- <li><a href="#skills" class="menu-btn">Skills</a></li> -->
                     <li  class="nav-link projects"><a href="#projects" class="menu-btn">Projects</a></li>
                     <li  class="nav-link contact"><a href="#contact" class="menu-btn">Contact</a></li>
-                    <li id="resume-button-1"  class="nav-link resume"><a  id="resume-link-1" target="_blank" href="./docs/My Resume.pdf"  download="Abhishek-M.V.R-Resume" onclick="window.open('https://drive.google.com/file/d/1ZoZ7KabOauWBymvt55pNpjtYJlGpCwGY/view?usp=sharing')">Resume</a></li>
+                    <li id="resume-button-1"  class="nav-link resume"><a  id="resume-link-1" target="_blank" href="./docs/Abhiskek-M.V.R-Resume.pdf"  download="Abhishek-M.V.R-Resume" onclick="window.open('https://drive.google.com/file/d/1ZoZ7KabOauWBymvt55pNpjtYJlGpCwGY/view?usp=sharing')">Resume</a></li>
     
                 </ul>
                 <div class="menu-btn">
@@ -55,7 +55,7 @@
                     <div  class="text-3">And I'm a <span class="typing"></span></div>
                    
                     <span  id="resume-button-2">
-                        <a  id="resume-link-2"   target="_blank" href="./docs/My Resume.pdf"  download="Abhishek-M.V.R-Resume" onclick="window.open('https://drive.google.com/file/d/1ZoZ7KabOauWBymvt55pNpjtYJlGpCwGY/view?usp=sharing')">Resume</a>
+                        <a  id="resume-link-2"   target="_blank" href="./docs/Abhiskek-M.V.R-Resume.pdf"  download="Abhishek-M.V.R-Resume" onclick="window.open('https://drive.google.com/file/d/1ZoZ7KabOauWBymvt55pNpjtYJlGpCwGY/view?usp=sharing')">Resume</a>
                     </span>
                 </div>
             </div>
