--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div  class="text-3">And I'm a <span class="typing"></span></div>
                    
                     <span  id="resume-button-2">
-                        <a  id="resume-link-2"   target="_blank" href="./docs/Abhiskek-M.V.R-Resume.pdf"  download="Abhishek-M.V.R-Resume" onclick="window.open('https://drive.google.com/file/d/1ZoZ7KabOauWBymvt55pNpjtYJlGpCwGY/view?usp=sharing')">Resume</a>
+                        <a  id="resume-link-2"   target="_blank" href="./docs/Abhiskek-M.V.R-Resume.pdf"  download="Abhishek-M.V.R-Resume.pdf" onclick="window.open('https://drive.google.com/file/d/1ZoZ7KabOauWBymvt55pNpjtYJlGpCwGY/view?usp=sharing')">Resume</a>
                     </span>
                 </div>
             </div>
